--- a/requirements.txt
+++ b/requirements.txt
@@ -23,10 +23,15 @@ seaborn>=0.11.0
 
 # Export --------------------------------------
 # coremltools>=4.1  # CoreML export
-# onnx>=1.9.0  # ONNX export
-# onnx-simplifier>=0.3.6  # ONNX simplifier
+onnx  # ONNX export
+onnxruntime 
+onnxsim 
+opencv-python
+onnx-simplifier  # ONNX simplifier
 # scikit-learn==0.19.2  # CoreML quantization
-# tensorflow>=2.4.1  # TFLite export
+tensorflow==2.5  # TFLite export
+tensorflow-probability
+onnx-tf
 # tensorflowjs>=3.9.0  # TF.js export
 # openvino-dev  # OpenVINO export
 
