--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 # Usage: pip install -r requirements.txt
 
 # Base ----------------------------------------
-matplotlib>=3.2.2
-numpy>=1.18.5,<1.24.0
+matplotlib>=3.6
+numpy>=1.19
 opencv-python>=4.1.1
 Pillow>=7.1.2
 PyYAML>=5.3.1
@@ -23,14 +23,15 @@ seaborn>=0.11.0
 
 # Export --------------------------------------
 # coremltools>=4.1  # CoreML export
-onnx==1.10.2  # ONNX export (1.10.2 for onnx-tf)
+onnx==1.8.0  # ONNX export
 onnxruntime 
 onnxsim 
 onnx-simplifier  # ONNX simplifier
 # scikit-learn==0.19.2  # CoreML quantization
-tensorflow==2.11.0 # TFLite export
+tensorflow-cpu==2.4.1
+tensorflow-addons==0.12.0
 tensorflow-probability # for TensorFlow
-onnx-tf
+onnx-tf==1.8.0
 # tensorflowjs>=3.9.0  # TF.js export
 # openvino-dev  # OpenVINO export
 
